Apps/code-executor-k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zzz
  name: zzz
  namespace: default
spec:
  selector:
    matchLabels:
      app: zzz
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zzz
    spec:
      serviceAccountName: serviceacc
      containers:
      - command:
        - /opt/app
        image: lol:v1
        imagePullPolicy: IfNotPresent
        # imagePullPolicy: Never
        name: lol
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: zzz
  ports:
    - port: 8000
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8000
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels:
      zzz: zzz
  policyTypes:
  - Ingress
  - Egress
